grammar.js
        document: $ => repeat1(
            choice(
                prec(1,
                    choice(
                        $._paragraph_break,
                        $._line_break,
                        $.heading,
                        $.detached_modifier,
                        $.definition,
                        $.footnote,
                        $.tag,
                        $.horizontal_line,
                        // Markers are separate from detached modifiers because they are the a l p h a modifier (consumes all elements)
                        $.marker,
                    )
                ),

                $.paragraph,
            )
        ),

        _paragraph: $ =>
        prec.right(0,
            seq(
                $.paragraph,

                optional(
                    $._paragraph_break,
                )
            )
        ),

        _paragraph_element: $ =>
        choice(
            alias($.word, "_word"),
            alias($.space, "_space"),
            alias($.trailing_modifier, "_trailing_modifier"),
            $.link,
            $.anchor_declaration,
            $.anchor_definition,
            $.escape_sequence,
            $.link_modifier,
            $.attached_modifier,
        ),

        _multi_paragraph_element: $ =>
        repeat1(
            choice(
                $._line_break,
                $._paragraph_element,
            ),
        ),

        _verbatim_segment: $ =>
        seq(
            repeat1(
                prec.right(1,
                    choice(
                        alias($.word, "_word"),
                        alias($.space, "_space"),
                        alias($.trailing_modifier, "_trailing_modifier"),
                        alias($.escape_sequence, "_lowercase"),
                        alias($.link_modifier, "_lowercase"),
                        alias($.bold_open, "_lowercase"),
                        alias($.italic_open, "_lowercase"),
                        alias($.strikethrough_open, "_lowercase"),
                        alias($.underline_open, "_lowercase"),
                        alias($.spoiler_open, "_lowercase"),
                        alias($.verbatim_open, "_lowercase"),
                        alias($.superscript_open, "_lowercase"),
                        alias($.subscript_open, "_lowercase"),
                        alias($.inline_comment_open, "_lowercase"),
                        alias($.inline_math_open, "_lowercase"),
                        alias($.variable_open, "_lowercase"),
                    ),
                )
            ),
        ),

        paragraph_segment: $ =>
        prec.right(0,
            repeat1(
                choice(
                    $._paragraph_element,
                    alias($._conflict_open, "_lowercase"),
                    alias($.markup_close, "_lowercase"),
                ),
            )
        ),

        paragraph: $ =>
        prec.right(0,
            repeat1(
                choice(
                    $.paragraph_segment,
                    $._line_break,
                )
            ),
        ),

        // ---- ATTACHED MODIFIERS ----
        bold: $ =>
        seq(
            alias($.bold_open, "_open_bold"),
            $._multi_paragraph_element,
            alias($.markup_close, "_close"),
        ),

        italic: $ =>
        seq(
            alias($.italic_open, "_open_italic"),
            $._multi_paragraph_element,
            alias($.markup_close, "_close"),
        ),

        strikethrough: $ =>
        seq(
            alias($.strikethrough_open, "_open_strikethrough"),
            $._multi_paragraph_element,
            alias($.markup_close, "_close"),
        ),

        underline: $ =>
        seq(
            alias($.underline_open, "_open_underline"),
            $._multi_paragraph_element,
            alias($.markup_close, "_close"),
        ),

        spoiler: $ =>
        seq(
            alias($.spoiler_open, "_open_spoiler"),
            $._multi_paragraph_element,
            alias($.markup_close, "_close"),
        ),

        verbatim: $ =>
        seq(
            alias($.verbatim_open, "_open_verbatim"),
            $._verbatim_segment,
            alias($.markup_close, "_close"),
        ),

        superscript: $ =>
        seq(
            alias($.superscript_open, "_open_superscript"),
            $._multi_paragraph_element,
            alias($.markup_close, "_close"),
        ),

        subscript: $ =>
        seq(
            alias($.subscript_open, "_open_subscript"),
            $._multi_paragraph_element,
            alias($.markup_close, "_close"),
        ),

        inline_comment: $ =>
        seq(
            alias($.inline_comment_open, "_open_inline_comment"),
            $._verbatim_segment,
            alias($.markup_close, "_close"),
        ),

        inline_math: $ =>
        seq(
            alias($.inline_math_open, "_open_inline_math"),
            $._verbatim_segment,
            alias($.markup_close, "_close"),
        ),

        variable: $ =>
        seq(
            alias($.variable_open, "_open_variable"),
            $._verbatim_segment,
            alias($.markup_close, "_close"),
        ),

        _conflict_open: $ =>
        prec.dynamic(-1,
            choice(
                alias($.bold_open, "_lowercase"),
                alias($.italic_open, "_lowercase"),
                alias($.strikethrough_open, "_lowercase"),
                alias($.underline_open, "_lowercase"),
                alias($.spoiler_open, "_lowercase"),
                alias($.verbatim_open, "_lowercase"),
                alias($.superscript_open, "_lowercase"),
                alias($.subscript_open, "_lowercase"),
                alias($.inline_comment_open, "_lowercase"),
                alias($.inline_math_open, "_lowercase"),
                alias($.variable_open, "_lowercase"),

                alias($.scoped_bold_open, "_lowercase"),
            )
        ),

        // Well, any character
        heading1: $ =>
        prec.right(0,
            seq(
                $.heading1_prefix,

                field(
                    "title",
                    $.paragraph_segment,
                ),

                repeat(prec(1, $._line_break)),

                field(
                    "content",

                    repeat(
                        choice(
                            $._paragraph,

                            $._paragraph_break,
                            $.detached_modifier,
                            $.definition,
                            $.footnote,
                            $.tag,
                            $.horizontal_line,

                            $.heading2,
                            $.heading3,
                            $.heading4,
                            $.heading5,
                            $.heading6,
                        )
                    )
                ),

                optional(
                    choice(
                        $.weak_paragraph_delimiter,
                        $.strong_paragraph_delimiter,
                    )
                )
            )
        ),

        // A second-level heading:
        // ** Example
        heading2: $ =>
        prec.right(0,
            seq(
                $.heading2_prefix,

                field(
                    "title",
                    $.paragraph_segment,
                ),

                repeat(prec(1, $._line_break)),

                field(
                    "content",

                    repeat(
                        choice(
                            $._paragraph,

                            $._paragraph_break,
                            $.detached_modifier,
                            $.definition,
                            $.footnote,
                            $.tag,
                            $.horizontal_line,

                            $.heading3,
                            $.heading4,
                            $.heading5,
                            $.heading6,
                        )
                    )
                ),

                optional(
                    $.weak_paragraph_delimiter,
                )
            )
        ),

        // A third-level heading:
        // *** Example
        quote: $ =>
        prec.right(0,
            repeat1(
                choice(
                    $.quote1,
                    $.quote2,
                    $.quote3,
                    $.quote4,
                    $.quote5,
                    $.quote6
                )
            )
        ),

        quote1: $ =>
        prec.right(0,
            seq(
                $.quote1_prefix,

                field(
                    "content",
                    $.paragraph_segment,
                ),

                optional(prec(1, $._line_break)),

                repeat(
                    choice(
                        $.quote2,
                        $.quote3,
                        $.quote4,
                        $.quote5,
                        $.quote6,
                    ),
                )
            )
        ),

        generic_list: $ =>
        prec.right(0,
            repeat1(
                choice(
                    $.unordered_list1,
                    $.unordered_list2,
                    $.unordered_list3,
                    $.unordered_list4,
                    $.unordered_list5,
                    $.unordered_list6,

                    $.ordered_list1,
                    $.ordered_list2,
                    $.ordered_list3,
                    $.ordered_list4,
                    $.ordered_list5,
                    $.ordered_list6,

                    $.todo_item1,
                    $.todo_item2,
                    $.todo_item3,
                    $.todo_item4,
                    $.todo_item5,
                    $.todo_item6,

                    $.unordered_link1,
                    $.unordered_link2,
                    $.unordered_link3,
                    $.unordered_link4,
                    $.unordered_link5,
                    $.unordered_link6,

                    $.ordered_link1,
                    $.ordered_link2,
                    $.ordered_link3,
                    $.ordered_link4,
                    $.ordered_link5,
                    $.ordered_link6,
                )
            )
        ),

        unordered_list1: $ =>
        prec.right(0,
            seq(
                $.unordered_list1_prefix,

                field(
                    "content",
                    $.paragraph,
                ),

                repeat(
                    choice(
                        $.todo_item2,
                        $.todo_item3,
                        $.todo_item4,
                        $.todo_item5,
                        $.todo_item6,

                        $.unordered_list2,
                        $.unordered_list3,
                        $.unordered_list4,
                        $.unordered_list5,
                        $.unordered_list6,

                        $.ordered_list2,
                        $.ordered_list3,
                        $.ordered_list4,
                        $.ordered_list5,
                        $.ordered_list6,

                        $.unordered_link2,
                        $.unordered_link3,
                        $.unordered_link4,
                        $.unordered_link5,
                        $.unordered_link6,

                        $.ordered_link2,
                        $.ordered_link3,
                        $.ordered_link4,
                        $.ordered_link5,
                        $.ordered_link6,
                    )
                )
            )
        ),
